# pubmed-paper-fetcher

./: README.md  output.csv  pharma_papers.csv  pyproject.toml  run_pubmed_fixed.bat  run_pubmed_interactive.bat
get_papers/: main.py  pubmed.py  utils.py
tests/: test_pubmed.py
