[tool.poetry]
name = "get-papers"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors"
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
get-papers-list = "get_papers.main:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
tqdm = "^4.66.0"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
